// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults value if report is not present 1`] = `
<div
  className="reportSummaryDetails_1kpzzqo"
>
  <div
    className="value_1uvf090"
  >
    ----
  </div>
  <div
    className="text_m522r3"
  >
    <div>
      label
    </div>
  </div>
</div>
`;

exports[`defaults value if report.total is not present 1`] = `
<div
  className="reportSummaryDetails_1kpzzqo"
>
  <div
    className="value_1uvf090"
  >
    0
  </div>
  <div
    className="text_m522r3"
  >
    <div>
      label
    </div>
  </div>
</div>
`;

exports[`report total is formated 1`] = `
<div
  className="reportSummaryDetails_1kpzzqo"
>
  <div
    className="value_1uvf090"
  >
    formatedValue
  </div>
  <div
    className="text_m522r3"
  >
    <div>
      label
    </div>
  </div>
</div>
`;
